Only compile for Scala 3 in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - run: bash <(curl -s https://codecov.io/bash)
 
   test3:
-    name: Test (Scala 3)
+    name: Compile (Scala 3)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -47,8 +47,7 @@ jobs:
           java-version: 11
           cache: sbt
       - run: npm install jsdom@12.2.0
-      - run: docker run -d -p 8080:8080 julienrf/endpoints4s-stubserver:1.1.0
-      - run: sbt "++ 3 test"
+      - run: sbt "++ 3 compile"
 
   versionPolicy:
     name: Check versioning policy and code style
